Added folder Seminar03 and HomeWork on Lesson 6

--- a/Seminar03/style.css
+++ b/Seminar03/style.css
@@ -29,8 +29,8 @@ a {
 }
 
 .top__content {
-   /* padding-top: 32px;
-   padding-left: 24px; */
+   padding-top: 32px;
+   padding-left: 24px;
    margin-bottom: 197px;
 }
 
