--- a/style.css
+++ b/style.css
@@ -1,34 +1,147 @@
+@font-face {
+   font-family: 'Gilroy-Bold';
+   src: url('../fonts/Gilroy-Bold.eot');
+   src: local('Gilroy Bold'), local('Gilroy-Bold'),
+      url('../fonts/Gilroy-Bold.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/Gilroy-Bold.woff') format('woff'),
+      url('../fonts/Gilroy-Bold.ttf') format('truetype');
+   font-weight: bold;
+   font-style: normal;
+}
+
+@font-face {
+   font-family: 'Gilroy-Medium';
+   src: url('Gilroy-Medium.eot');
+   src: local('Gilroy Medium'), local('Gilroy-Medium'),
+      url('Gilroy-Medium.eot?#iefix') format('embedded-opentype'),
+      url('Gilroy-Medium.woff') format('woff'),
+      url('Gilroy-Medium.ttf') format('truetype');
+   font-weight: 500;
+   font-style: normal;
+}
+
+@font-face {
+   font-family: 'Gilroy-SemiBold';
+   src: url('Gilroy-SemiBold.eot');
+   src: local('Gilroy SemiBold'), local('Gilroy-SemiBold'),
+      url('Gilroy-SemiBold.eot?#iefix') format('embedded-opentype'),
+      url('Gilroy-SemiBold.woff') format('woff'),
+      url('Gilroy-SemiBold.ttf') format('truetype');
+   font-weight: 600;
+   font-style: normal;
+}
+
 * {
    padding: 0;
    margin: 0;
+   /* font-family: 'Gilroy';
+   font-style: normal; */
 }
 
 a {
    text-decoration: none;
 }
 
+body {
+   padding: 0 auto;
+}
+
 .top {
    padding-top: 40px;
-   /* padding-bottom: 96px; */
+   max-width: 1190px;
+   padding-left: 10px;
+   padding-right: 10px;
+   margin: 0 auto;
 }
 
 .header {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
    margin-bottom: 84px;
 }
 
+.header__nav {
+   display: flex;
+   justify-content: space-between;
+   max-width: 555px;
+   width: 687px;
+}
+
+.header__link {
+   font-family: 'Gilroy-SemiBold';
+   font-style: normal;
+   font-weight: 700;
+   font-size: 14px;
+   line-height: 16px;
+   color: #000000;
+}
+
+/* .header__link:not(:last-child) {
+   margin-right: calc((687px - 310px) / 10);
+} */
+
+.header__link:first-child {
+   color: #F25822;
+}
+
 .top__content {
+   display: flex;
+   justify-content: space-between;
    margin-bottom: 162px;
 }
 
 .top__title {
+   font-family: 'Gilroy-Bold';
+   font-weight: 700;
+   font-size: 60px;
+   line-height: 70px;
+   color: #000000;
    margin-bottom: 17px;
 }
 
+.top__text {
+   font-family: 'Gilroy-Medium';
+   font-weight: 500;
+   font-style: normal;
+   font-size: 20px;
+   line-height: 23px;
+
+   color: #888888;
+}
+
 .top__buttons {
+   display: flex;
    margin-top: 37px;
 }
 
+.btn {
+   font-family: 'Gilroy-Bold';
+   font-weight: 700;
+   font-style: normal;
+   font-size: 15px;
+   line-height: 18px;
+   border: none;
+   cursor: pointer;
+   border-radius: 50px;
+   padding: 15px 36px 16px 35px;
+}
+
+.top__btn-start {
+   background: #F25822;
+   box-shadow: 4px 4px 8px rgba(242, 88, 34, 0.2);
+   color: #FFFFFF;
+   margin-right: calc(72px - 35px);
+}
+
+.top__btn-watch {
+   background: rgba(255, 255, 255, 0);
+   color: #AAAAAA;
+}
+
 .top__logos {
+   display: flex;
+   justify-content: space-between;
    padding-top: 97px;
    padding-bottom: 96px;
 }
