--- a/Seminar03/style.css
+++ b/Seminar03/style.css
@@ -75,3 +75,47 @@ a {
 /* .top__logos {
    margin-top: 156px;
 } */
+
+.grid__block {
+   display: grid;
+   gap: 30px;
+   grid-template-columns: repeat(3, 362px);
+   justify-content: center;
+   padding-top: 264px;
+   padding-bottom: 243px;
+   /* grid-template: repeat(3, 1fr)/ repeat(3, 1fr); */
+}
+
+.item {
+   background: #132035;
+   border-radius: 10px;
+   padding: 30px;
+   display: grid;
+   justify-items: center;
+   gap: 30px;
+}
+
+.item-4big {
+   grid-area: span 2 / span 2;
+   gap: 60px;
+}
+
+.item__header {
+   font-style: normal;
+   font-weight: 700;
+   font-size: 25px;
+   line-height: 125%;
+   text-align: center;
+   color: #FFFFFF;
+   opacity: 0.7;
+}
+
+.item__text {
+   font-style: normal;
+   font-weight: 600;
+   font-size: 16px;
+   line-height: 160%;
+   text-align: center;
+   color: #FFFFFF;
+   opacity: 0.7;
+}
