--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@ body {
    padding-left: 10px;
    padding-right: 10px;
    margin: 0 auto; */
+   max-width: 1920px;
+   margin: 0 auto;
 
    display: flex;
    flex-direction: column;
@@ -169,7 +171,6 @@ body {
    padding-bottom: 100px;
    background: #FFFFFF;
 
-   padding-top: 40px;
    max-width: 1190px;
    padding-left: 10px;
    padding-right: 10px;
@@ -178,7 +179,6 @@ body {
 
 
 .leader__item {
-   /* width: 370px; */
    padding: 40px 30px 25px;
 }
 
@@ -211,6 +211,11 @@ body {
 }
 
 .choose__main {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   padding-top: 92px;
+   padding-bottom: 100px;
    background: #FAFAFA;
 }
 
@@ -220,7 +225,6 @@ body {
    line-height: 53px;
    color: #000000;
    margin-bottom: 19px;
-   margin-top: 92px;
 }
 
 .choose__text {
@@ -232,14 +236,12 @@ body {
    min-width: 682px;
    padding-left: 619px;
    padding-right: 619px;
-   /* margin-bottom: 55px; */
 }
 
 .main__cards {
    display: grid;
    gap: 30px;
    grid-template-columns: repeat(3, 370px);
-   padding-bottom: 100px;
    padding-top: 55px;
 }
 
@@ -281,7 +283,6 @@ body {
    font-size: 13px;
    line-height: 150%;
    padding: 15px 35px 15px 35px;
-   /* margin-right: calc(72px - 35px); */
 }
 
 .arrow__more {
