--- a/SeminarCite/style.css
+++ b/SeminarCite/style.css
@@ -1,15 +1,15 @@
 * {
    padding: 0;
    margin: 0;
-   font-family: 'Open Sans',
-      sans-serif;
+   /* font-family: 'Open Sans',
+      sans-serif; */
 }
 
-/* font-family: 'Open Sans',
-sans-serif; */
-/* font-family: 'Roboto',
-sans-serif; */
+body {
+   font-family: 'Open Sans',
+      sans-serif;
 
+}
 
 a {
    text-decoration: none;
@@ -40,7 +40,7 @@ a {
 }
 
 .header__link {
-   font-family: 'Open Sans';
+   /* font-family: 'Open Sans'; */
    font-style: normal;
    font-weight: 600;
    font-size: 16px;
@@ -108,7 +108,7 @@ a {
    border-radius: 5px;
    padding: 15px 30px;
    cursor: pointer;
-   font-family: 'Open Sans';
+   /* font-family: 'Open Sans'; */
    font-style: normal;
    font-weight: 600;
    font-size: 20px;
