--- a/docs/style.css
+++ b/docs/style.css
@@ -247,6 +247,75 @@ a {
 
 .goods__item_img {
    margin-bottom: 25px;
+   position: relative;
+}
+
+.goods__item_veil {
+   width: 100%;
+   height: 100%;
+   background-color: rgba(58, 56, 56, 0);
+   z-index: 100;
+   position: absolute;
+   top: 0;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border: rgba(255, 255, 255, 0) 1px solid;
+   color: rgba(255, 255, 255, 0);
+   fill: rgba(255, 255, 255, 0);
+   stroke: rgba(255, 255, 255, 0);
+}
+
+.goods__item_veil:hover {
+   background-color: rgba(58, 56, 56, .86);
+   border: rgba(255, 255, 255, 1) 1px solid;
+   color: rgba(255, 255, 255, 1);
+   fill: rgba(255, 255, 255, 1);
+   stroke: rgba(255, 255, 255, 1);
+}
+
+.goods__item__button {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+
+   border: inherit;
+   /* border: #FFFFFF 1px solid; */
+   padding: 11px 16px 9px 14px;
+   min-width: 110px;
+   cursor: pointer;
+
+   fill: inherit;
+}
+
+/* .goods__item__button img {
+   max-width: 26px;
+   max-height: 24px;
+} */
+
+.goods__item__button svg {
+   fill: inherit;
+   stroke: inherit;
+}
+
+.goods__item__button path {
+   /* fill: red;
+   stroke: red; */
+   fill: inherit;
+   stroke: inherit;
+}
+
+.goods__item_btn {
+   text-align: center;
+   border: none;
+   font-style: normal;
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 17px;
+   color: inherit;
+   /* color: #FFFFFF; */
+   cursor: inherit;
+   background-color: rgba(58, 56, 56, 0);
 }
 
 .goods__item_header {
