--- a/Seminar16_HW/style.css
+++ b/Seminar16_HW/style.css
@@ -155,6 +155,7 @@ h1 {
 .header__burger_block:hover .header__menu {
    opacity: 1;
    right: -140px;
+   top: 54px;
 }
 
 .header__menu {
@@ -163,10 +164,9 @@ h1 {
    padding-left: 33px;
    background-color: #fff;
    position: absolute;
-   top: 54px;
+   top: -999px;
    opacity: 0;
-   right: 0;
-   /* right: -140px; */
+   right: -140px;
    transition: all 1s;
 }
 
@@ -245,13 +245,11 @@ summary::before {
 
 .face__img {
    justify-self: end;
-   /* max-width: 141%; */
    max-width: 100%;
 }
 
 .face__text {
    padding-left: 65px;
-   /* border-left: 12px solid #F16D7F; */
 }
 
 .face__title {
@@ -431,13 +429,10 @@ summary::before {
    display: flex;
    justify-content: space-between;
    align-items: center;
-
    border: inherit;
-   /* border: #FFFFFF 1px solid; */
    padding: 11px 16px 9px 14px;
    min-width: 110px;
    cursor: pointer;
-
    fill: inherit;
 }
 
@@ -459,7 +454,6 @@ summary::before {
    font-size: 14px;
    line-height: 17px;
    color: inherit;
-   /* color: #FFFFFF; */
    cursor: inherit;
    background-color: rgba(58, 56, 56, 0);
 }
@@ -497,7 +491,6 @@ summary::before {
 .button__block {
    display: flex;
    justify-content: center;
-   /* animation: wobble-hor-bottom 0.8s both; */
 }
 
 .goods__btn {
@@ -729,8 +722,6 @@ summary::before {
 }
 
 @media (max-width: 1024px) {
-
-   /* @media (min-width: 768px) and (max-width: 1024px) { */
    .header__content {
       padding-bottom: 18px;
    }
@@ -783,7 +774,6 @@ summary::before {
    .subscribe__form_subheader {
       margin-bottom: 27px;
    }
-
 }
 
 @media (max-width: 767px) {
@@ -808,8 +798,17 @@ summary::before {
       margin-right: 0;
    }
 
-   .header__menu {
+   .header__burger_block:hover .header__menu {
+      opacity: 1;
+      right: -140px;
       top: 58px;
+   }
+
+   .header__menu {
+      top: -999px;
+      opacity: 0;
+      right: 0;
+      transition: all 1s;
    }
 
    .header__burger {
@@ -882,9 +881,6 @@ summary::before {
    }
 
    .our-pas__items {
-      /* display: flex;
-      justify-content: space-between;
-      align-items: center; */
       flex-direction: column;
    }
 
