Added tasks of the Seminar16 and corrected style.css of Seminar12_HW

--- a/Seminar16_HW/style.css
+++ b/Seminar16_HW/style.css
@@ -398,6 +398,7 @@ summary::before {
 .goods__item_img {
    margin-bottom: 25px;
    position: relative;
+   /* overflow-y: wrap; */
 }
 
 .goods__item_veil {
